--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    econtainer_name: chat_frontend
+    container_name: chat_frontend
     ports:
       - 8080:8080
     volumes:
